--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <script src="script.js" defer></script>
+    <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="title">
+        <h1>Calculator</h1>
+    </div>
+    <div class="calc-container">
+        <div class="output"></div>
+    </div>
 </body>
 </html>
