--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
     </div>
     <div class="calc-container">
         <div class="output"></div>
+        <div class="upper-buttons">
+            <button class="root">√</button>
+            <button class="power">^</button>
+            <button class="del">del</button>
+            <button class="clear">AC</button>
+        </div>
+        <div class="main-operators">
+            <button class="division">÷</button>
+            <button class="multiplication">x</button>
+            <button class="subtraction">-</button>
+            <button class="addition">+</button>
+        </div>
+        <div class="numbers">
+            <button class="a">9</button>
+            <button class="b">8</button>
+            <button class="c">7</button>
+            <button class="d">6</button>
+            <button class="e">5</button>
+            <button class="f">4</button>
+            <button class="g">3</button>
+            <button class="h">2</button>
+            <button class="i">1</button>
+            <button class="j">0</button>
+            <button class="decimal">.</button>
+            <button class="equals">=</button>
+        </div>
     </div>
 </body>
 </html>
