--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="output"></div>
         <div class="upper-buttons">
             <button class="clear">AC</button>
-            <button class="del">del</button>
+            <button class="delete">del</button>
             <button class="root">√</button>
             <button class="power">^</button>
         </div>
