Began scripting buttons and changed button colors

--- a/index.html
+++ b/index.html
@@ -13,32 +13,34 @@
         <h1>Calculator</h1>
     </div>
     <div class="calc-container">
-        <div class="output"></div>
+        <div class="output">
+            <h2 class="output-display">5</h2>
+        </div>
         <div class="upper-buttons">
-            <button class="clear">AC</button>
-            <button class="delete">del</button>
-            <button class="root">√</button>
-            <button class="power">^</button>
+            <button class="clear calc-keys">AC</button>
+            <button class="delete calc-keys">del</button>
+            <button class="root calc-keys">√</button>
+            <button class="power calc-keys">^</button>
         </div>
         <div class="main-operators">
-            <button class="division">÷</button>
-            <button class="multiplication">x</button>
-            <button class="subtraction">-</button>
-            <button class="addition">+</button>
+            <button class="division calc-keys">÷</button>
+            <button class="multiplication calc-keys">x</button>
+            <button class="subtraction calc-keys">-</button>
+            <button class="addition calc-keys">+</button>
         </div>
         <div class="numbers">
-            <button class="a">9</button>
-            <button class="b">8</button>
-            <button class="c">7</button>
-            <button class="d">6</button>
-            <button class="e">5</button>
-            <button class="f">4</button>
-            <button class="g">3</button>
-            <button class="h">2</button>
-            <button class="i">1</button>
-            <button class="j">0</button>
-            <button class="decimal">.</button>
-            <button class="equals">=</button>
+            <button class="a calc-keys">9</button>
+            <button class="b calc-keys">8</button>
+            <button class="c calc-keys">7</button>
+            <button class="d calc-keys">6</button>
+            <button class="e calc-keys">5</button>
+            <button class="f calc-keys">4</button>
+            <button class="g calc-keys">3</button>
+            <button class="h calc-keys">2</button>
+            <button class="i calc-keys">1</button>
+            <button class="j calc-keys">0</button>
+            <button class="decimal calc-keys">.</button>
+            <button class="equals calc-keys">=</button>
         </div>
     </div>
 </body>
