Switched from classes to IDs for buttons

--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
             <h2 class="output-display">5</h2>
         </div>
         <div class="upper-buttons">
-            <button class="clear calc-keys">AC</button>
-            <button class="delete calc-keys">del</button>
-            <button class="root calc-keys">√</button>
-            <button class="power calc-keys">^</button>
+            <button id="clear">AC</button>
+            <button id="delete">del</button>
+            <button id="root">√</button>
+            <button id="power">^</button>
         </div>
         <div class="main-operators">
-            <button class="division calc-keys">÷</button>
-            <button class="multiplication calc-keys">x</button>
-            <button class="subtraction calc-keys">-</button>
-            <button class="addition calc-keys">+</button>
+            <button id="division">÷</button>
+            <button id="multiplication">x</button>
+            <button id="subtraction">-</button>
+            <button id="addition">+</button>
         </div>
         <div class="numbers">
-            <button class="a calc-keys">9</button>
-            <button class="b calc-keys">8</button>
-            <button class="c calc-keys">7</button>
-            <button class="d calc-keys">6</button>
-            <button class="e calc-keys">5</button>
-            <button class="f calc-keys">4</button>
-            <button class="g calc-keys">3</button>
-            <button class="h calc-keys">2</button>
-            <button class="i calc-keys">1</button>
-            <button class="j calc-keys">0</button>
-            <button class="decimal calc-keys">.</button>
-            <button class="equals calc-keys">=</button>
+            <button id="a">9</button>
+            <button id="b">8</button>
+            <button id="c">7</button>
+            <button id="d">6</button>
+            <button id="e">5</button>
+            <button id="f">4</button>
+            <button id="g">3</button>
+            <button id="h">2</button>
+            <button id="i">1</button>
+            <button id="j">0</button>
+            <button id="decimal">.</button>
+            <button id="equals">=</button>
         </div>
     </div>
 </body>
