Redid styling using grid instead of flexbox

--- a/index.html
+++ b/index.html
@@ -14,34 +14,29 @@
     </div>
     <div class="calc-container">
         <div class="output">
-            <h2 class="output-display">5</h2>
+            <div class="previous-output">1+1</div>
+            <div class="current-output"></div>
         </div>
-        <div class="upper-buttons">
-            <button id="clear">AC</button>
-            <button id="delete">del</button>
-            <button id="root">√</button>
-            <button id="power">^</button>
-        </div>
-        <div class="main-operators">
-            <button id="division">÷</button>
-            <button id="multiplication">x</button>
-            <button id="subtraction">-</button>
-            <button id="addition">+</button>
-        </div>
-        <div class="numbers">
-            <button id="a">9</button>
-            <button id="b">8</button>
-            <button id="c">7</button>
-            <button id="d">6</button>
-            <button id="e">5</button>
-            <button id="f">4</button>
-            <button id="g">3</button>
-            <button id="h">2</button>
-            <button id="i">1</button>
-            <button id="j">0</button>
-            <button id="decimal">.</button>
-            <button id="equals">=</button>
-        </div>
+        <button class="clear">AC</button>
+        <button class="delete">DEL</button>
+        <button>√</button>
+        <button>^</button>
+        <button>÷</button>
+        <button>x</button>
+        <button>-</button>
+        <button>+</button>
+        <button>9</button>
+        <button>8</button>
+        <button>7</button>
+        <button>6</button>
+        <button>5</button>
+        <button>4</button>
+        <button>3</button>
+        <button>2</button>
+        <button>1</button>
+        <button>0</button>
+        <button>.</button>
+        <button class="equals">=</button>
     </div>
 </body>
 </html>
