--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </div>
     <div class="calc-container">
         <div class="output">
-            <div class="previous-output">1+1</div>
+            <div class="previous-output"></div>
             <div class="current-output"></div>
         </div>
         <button class="clear">AC</button>
         <button class="delete">DEL</button>
-        <button>√</button>
-        <button>^</button>
+        <!-- <button>√</button>
+        <button>^</button> -->
         <button>÷</button>
         <button>x</button>
         <button>-</button>
