--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
     </div>
     <div class="calc-container">
         <div class="output">
-            <div class="previous-output"></div>
-            <div class="current-output"></div>
+            <div data-previous-output class="previous-output"></div>
+            <div data-current-output class="current-output"></div>
         </div>
-        <button class="clear">AC</button>
-        <button class="delete">DEL</button>
+        <button data-clear class="clear">AC</button>
+        <button data-delete class="delete">DEL</button>
         <!-- <button>√</button>
         <button>^</button> -->
-        <button>÷</button>
-        <button>x</button>
-        <button>-</button>
-        <button>+</button>
-        <button>9</button>
-        <button>8</button>
-        <button>7</button>
-        <button>6</button>
-        <button>5</button>
-        <button>4</button>
-        <button>3</button>
-        <button>2</button>
-        <button>1</button>
-        <button>0</button>
-        <button>.</button>
-        <button class="equals">=</button>
+        <button data-operation>÷</button>
+        <button data-operation>x</button>
+        <button data-operation>-</button>
+        <button data-operation>+</button>
+        <button data-number>9</button>
+        <button data-number>8</button>
+        <button data-number>7</button>
+        <button data-number>6</button>
+        <button data-number>5</button>
+        <button data-number>4</button>
+        <button data-number>3</button>
+        <button data-number>2</button>
+        <button data-number>1</button>
+        <button data-number>0</button>
+        <button data-number>.</button>
+        <button data-equals class="equals">=</button>
     </div>
 </body>
 </html>
